fix: hover appears to be wrong color and default state ring

--- a/packages/styles/combobox.css
+++ b/packages/styles/combobox.css
@@ -90,10 +90,9 @@
 }
 
 .Combobox__input:focus-within {
-  border: 1px solid var(--combobox-input-border-focus-color);
-  box-shadow: 0 0 0 2px var(--combobox-input-border-focus-color),
-    0 0 5px var(--combobox-input-border-focus-glow-color),
-    inset 0 1px 2px rgba(0, 0, 0, 0.05);
+  border: 2px solid var(--combobox-input-border-focus-color);
+  box-shadow: 0px 0px 5px var(--combobox-input-border-focus-glow-color),
+    inset 0px 1px 2px rgba(0, 0, 0, 0.05);
 }
 .Combobox__arrow {
   width: 2rem;
@@ -237,6 +236,10 @@
   border: 2px solid var(--combobox-input-error-border-color);
   box-shadow: 0px 0px 5px var(--field-border-color-error-focus-glow),
     inset 0px 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.Combobox__input--error:hover {
+  border: 2px solid var(--combobox-input-error-border-color);
 }
 
 .ComboboxListbox__empty {
